--- a/src/components/Pagination/Pagination.scss
+++ b/src/components/Pagination/Pagination.scss
@@ -15,7 +15,7 @@ $track-color: #346d1f !default;
 		border-radius: 20px;
 	
 		.page-wrapper{		
-			margin: 0 1%;	
+			
 
 			.btn-paginate{
 				padding: 10px 15px;
@@ -45,13 +45,11 @@ $track-color: #346d1f !default;
 		padding: 10px;
 		background-color: transparent;
 		border-radius: 100px;
-		border: 1px solid rgb(129, 128, 128);
 		box-shadow: inset 0px 1px 0px 0px rgba(255,255,255,.35);
 		cursor: pointer;
 
 		&:hover{
-			background: #ccc;
-			color: #005bff;
+			background:  #346d1f;
 		}
 	}
 
