--- a/src/components/ProductCard/ProductCard.scss
+++ b/src/components/ProductCard/ProductCard.scss
@@ -4,7 +4,10 @@
 	width: 30%;
 	max-width: 30%;
     border-radius: 10px;
-    cursor: pointer;
+	cursor: pointer;
+	border: 1px solid #e1e1e1;
+	flex-direction: column;
+    display: flex;
   
     .product-inner {
       height: 100%;
@@ -12,8 +15,6 @@
       flex-direction: column;
       justify-content: space-between;
       padding: 20px 20px 0;
-      border-radius: 10px;
-      border: 1px solid #e1e1e1;
       transition: box-shadow 0.2s ease-in-out;
   
       &:hover {
@@ -79,101 +80,161 @@
 	  }
 
 	  .product-properties{
-		height: 20%;
-  
-		.price-block{
-		  margin: 0 auto;
-		  padding: 15px;
-		  text-align: center;
-		}
+			height: 20%;
+			word-wrap: break-word;
+			padding: 15px 0;
+			align-items: center;
+			display: flex;
 	
-	  }
+			.price-block{
+				margin: 0 auto;
+				padding: 15px;
+				text-align: center;
+			}
 
-	  .product-footer {
+			@media (max-width: 1240px) {
+				.price-block{
+					padding: 5px;
+				}
+			}
+
+			.property-section{
+				margin-bottom: 1rem;
+
+				
+			}
+
+			.stock-block{
+				display: flex;
+				justify-content: center;
+				margin: 0;
+		
+				.stock{
+				  background: #ededed;
+				  display: inline-block;
+				  font-size: 14px;
+				  font-weight: 600;
+				  padding: 8px;
+				  max-width: 125px;
+				  text-overflow: ellipsis;
+				  white-space: nowrap;
+				  margin-right: 4px;
+		
+				  &.available{
+					background: #31df21;
+					color: #ededed;
+					
+				  }
+		
+				  &.not-available{
+					background: #e63e32;
+					color: #ededed;
+				  }
+		
+				}    
+		
+			}
+
+	
+		} 
+
+
+	}
+	
+	.product-footer {
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
 		margin-top: 15px;
-		flex-direction: row;
 	
 		.counter_block{
-		  box-sizing: border-box;
-		  border: 1px solid #f3f3f5;
-		  background: #f3f3f5;
-		  display: inline-block;
-		  text-align: center;
-		  border-radius: 2px;
-		  padding: 5px;
-		  
-		  >span:before{
-			display: inline-block;
-			content: "";
-			width: 14px;
-			height: 17px;
-			background: url(/bitrix/templates/aspro_next/images/svg/ai.svg) -80px -191px no-repeat;
-			vertical-align: middle;
-		  }
-	
-		  input[type="text"]{
-			width: 34px;
-			border: 0;
-			border-left: 1px solid #f3f3f5;
-			border-right: 1px solid #f3f3f5;
+			width: 50%;
+			height: 100%;
+			box-sizing: border-box;
+			border: 1px solid #f3f3f5;
 			background: #f3f3f5;
-			color: #666;
-			font-size: 13px;
-			height: 34px;
-			border-radius: 0;
+			display: inline-block;
 			text-align: center;
-			vertical-align: top;
-			line-height: 13px;
-			padding: 20px 3px;
-			font-weight: 700;
-		  }
-	
-		  .minus{
-			line-height: 40px;
-			display: inline-block;
-			cursor: pointer;
-			vertical-align: top;
-	
-			&:before{
-			  background: url(../../assets/minus-solid.svg);
-			  vertical-align: middle;
+			border-radius: 2px;
+			padding: 5px;
+			
+			>span:before{
+				display: inline-block;
+				content: "";
+				width: 14px;
+				height: 17px;
+				background: url(/bitrix/templates/aspro_next/images/svg/ai.svg) -80px -191px no-repeat;
+				vertical-align: middle;
 			}
-		  }
-	
-		  .plus{
-			line-height: 40px;
-			display: inline-block;
-			cursor: pointer;
-	
-			&:before{
-			  background: url(../../assets/plus-solid.svg);
-			  vertical-align: middle;
+		
+			input[type="text"]{
+				width: 34px;
+				border: 0;
+				border-left: 1px solid #f3f3f5;
+				border-right: 1px solid #f3f3f5;
+				background: #f3f3f5;
+				color: #666;
+				font-size: 13px;
+				height: 34px;
+				border-radius: 0;
+				text-align: center;
+				vertical-align: top;
+				line-height: 13px;
+				padding: 20px 3px;
+				font-weight: 700;
 			}
-		  }
+		
+			.minus{
+				line-height: 40px;
+				display: inline-block;
+				cursor: pointer;
+				vertical-align: top;
+		
+				&:before{
+				background: url(../../assets/minus-solid.svg);
+				vertical-align: middle;
+				}
+			}
+		
+			.plus{
+				line-height: 40px;
+				display: inline-block;
+				cursor: pointer;
+		
+				&:before{
+				background: url(../../assets/plus-solid.svg);
+				vertical-align: middle;
+				}
+			}
 		  
 		}
-	
-		.product-icons {
-		  margin-right: -10px;
-	
-		  .product-icons--link {
-			display: inline-block;
-			padding: 0 10px;
-			cursor: pointer;
-		  }
-		}    
-	  }
 
+		.buy-block{
+			width: 50%;
+			height: 100%;
+			color: #000;
+			float: right;
+			font-size: 0.9rem;
+			text-transform: uppercase;
+			border-radius: 2px;
+			
+		  
+			.add-to-cart-btn{
+				margin: 0;
+				height: 100%;
+				border-radius: 0px;
 
-    }
+				&:hover{
+					opacity: 1;
+				}
+			}
+				
+		}
+	
+		  
+	}
   
    
-
-    
-  
     @media screen and (max-width: 550px) {
       .image-wrapper .product-image{
         max-width: 140px;
@@ -181,104 +242,15 @@
       }
     }
   
-    .buy-block{
-        color: black;
-        float: right;
-        font-size: 0.9rem;
-        border-radius: 5px;
-        padding: 3px 10px 2px;
-        text-transform: uppercase;
-        border-radius: 2px;
-        margin: 1rem 0;
-        
-      
-        .add-to-cart-btn{
-  
-          &:hover{
-            opacity: 1;
-          }
-		}
-			
-      }
-  
-  
-    .image,
-    .spacer {
-      background-position: center;
-      background-size: cover;
-      height: 100%;
-      max-width: 100%;
-      border-bottom: 1px solid #eee;
-      border-top: 1px solid #eee;
-      text-align: center;
-    }
-  
-    .product-properties {
-      word-wrap: break-word;
-      padding: 15px;
-      text-align: center;
-
-      .property-section{
-        margin-bottom: 1rem;
-      }
-
-      .stock-block{
-        display: flex;
-        justify-content: center;
-
-        .stock{
-          background: #ededed;
-          display: inline-block;
-		  font-size: 14px;
-		  font-weight: 600;
-          padding: 4px 8px;
-          border-radius: 4px;
-          max-width: 125px;
-          text-overflow: ellipsis;
-          white-space: nowrap;
-          margin-right: 4px;
-
-          &.available{
-            background: #31df21;
-			color: #ededed;
-			
-          }
-
-          &.not-available{
-            background: #e63e32;
-            color: #ededed;
-          }
-
-        }    
-
-      }
-
-    }
-  
   }
   
   
 
-  @media screen and (max-width: 1024px) {
+  @media screen and (max-width: 1023px) {
     .product {
 		flex: 45%;
 		width: 45%;
 		max-width: 45%;
-      
-      .product-inner{
-        .product-header{
-        
-          .product-image-wrapper{
-            .image-wrapper{
-              .product-image{
-                // width: 100% !important;
-              }
-              
-            }
-          }
-        }
-        
-      }
 
     }
 
@@ -288,6 +260,7 @@
     .product {
 	  max-width: 100%;
 	  flex: 0 0 100%;
+	  width: 100%;
       .product-inner{
         .product-header{
           &.product-header--top{
@@ -295,14 +268,7 @@
               min-height: 50px;
             }
           }
-          .product-image-wrapper{
-            .image-wrapper{
-              .product-image{
-                // width: 100% !important;
-              }
-              
-            }
-          }
+          
         }
         
       }
