--- a/src/components/VerticalMenu/VerticalMenu.scss
+++ b/src/components/VerticalMenu/VerticalMenu.scss
@@ -2,7 +2,10 @@
     padding: 21px 18px 21px 23px;
     margin-left: 20px;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.170509);
-    min-height: 1188px;
+	min-height: 1188px;
+	
+
+	
     
 
     &__logo{
@@ -75,4 +78,10 @@
         
         
     }
+}
+
+@media (max-width: 1240px) {
+	.vertical-menu{
+		margin:0;
+	}
 }
