--- a/src/components/ProductList/ProductList.scss
+++ b/src/components/ProductList/ProductList.scss
@@ -6,11 +6,11 @@
     }
 
     .products-list-controls{
-	  display: flex;
-	  justify-content: flex-end;
+	    display: flex;
+	    justify-content: flex-end;
       background: #fff;
       padding: 21px 18px;
-	  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.170509);
+	    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.170509);
     }
 
     .display-quantity{
@@ -56,7 +56,7 @@
       }
 
       .select__current{
-        font-size: 1.1em;
+        font-size: 0.9em;
         line-height: 24px;
         padding: 8px;
       }
@@ -162,6 +162,32 @@
 				.products{
 					justify-content: flex-start;
 					flex-direction: column;
+				}
+			}
+      
+    }
+     
+  }
+
+  @media screen and (max-width: 425px){
+
+    .product-list{
+			.products-wrapper{
+				.products-list-controls{
+          flex-direction: column;
+
+          .display-quantity{
+            margin: 10px;
+
+            .select__body{
+              z-index: 999;
+            }
+          }
+          
+          .display-sort{
+            flex-direction: row;
+            margin: 10px;
+          }
 				}
 			}
       
