--- a/src/components/ProductDetail/ProductDetail.scss
+++ b/src/components/ProductDetail/ProductDetail.scss
@@ -1,5 +1,5 @@
 .product-container {
-    width: 75%;
+    width: 100%;
     min-height: 300px;
     margin: 1rem auto;
     text-align: center;
@@ -13,7 +13,7 @@
 		width: 100%;
 		min-height: 300px;
 		display: flex;
-		flex-direction: column;
+		flex-direction: row;
 
 		
 		&__top{
@@ -76,8 +76,8 @@
 
 			.product-rating{
 				display: flex;
-				flex-direction: column;
-				justify-content: space-between;
+				flex-direction: row;
+				justify-content: center;
 				align-items: center;
 				font-weight: 700;
 			}
@@ -116,17 +116,16 @@
 	
 			.buy-block{
 				display: flex;
-				flex-direction: column;
+				flex-direction: row;
 				justify-content: center;
 				align-items: center;
 				color: #000;
 				font-size: 0.9rem;
 				border-radius: 5px;
-				padding: 3px 10px 2px;
+				padding: 1em 10rem;
 				text-transform: uppercase;
 				border-radius: 2px;
 				margin: 1rem 0;
-				background-color: #346d1f;
 				
 
 				/*Input counter block styles*/
@@ -139,7 +138,6 @@
 					padding: 5px;
 					width: 50%;
 					flex: 50%;
-					margin-bottom: 3%;
 
 					
 					>span:before{
@@ -195,8 +193,8 @@
 					width: 50%;
 					flex: 50%;
 					text-align: center;
-					margin-bottom: 3%;
-
+					padding: 0 3%;
+					height: 100%;
 					button{
 						height: 100%;
 					}
@@ -217,7 +215,6 @@
 				padding: 1rem 0;
 				position: relative;
 				font-weight: 600;
-				text-decoration: underline;
 				text-align: center;
 			}
 		
@@ -229,6 +226,10 @@
 
 		.price-block{
 			padding: 2rem 0;
+
+			span.price{
+				font-size: 2.6em;
+			}
 
 			.quantity-block{
 				padding: 1rem 0;
@@ -248,7 +249,7 @@
       padding: 1rem;
       width: 100%;
       margin: 1rem auto;
-      min-height: 300px;
+	  min-height: 300px;
     }
 }
 
