--- a/src/components/ProductList/ProductList.scss
+++ b/src/components/ProductList/ProductList.scss
@@ -7,7 +7,7 @@
 
     .products-list-controls{
 	    display: flex;
-	    justify-content: flex-end;
+	    justify-content: space-between;
       background: #fff;
       padding: 21px 18px;
 	    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.170509);
