--- a/src/components/ProductCard/ProductCard.scss
+++ b/src/components/ProductCard/ProductCard.scss
@@ -1,33 +1,33 @@
 .product {
-    margin: 10px;
+	margin: 10px;
 	flex: 30%;
 	width: 30%;
 	max-width: 30%;
-    border-radius: 10px;
+	border-radius: 10px;
 	cursor: pointer;
 	border: 1px solid #e1e1e1;
 	flex-direction: column;
-    display: flex;
-  
-    .product-inner {
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      padding: 20px 20px 0;
-      transition: box-shadow 0.2s ease-in-out;
-  
-      &:hover {
-        box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
-	  }
-	  
-	  .product-header{
-		  height: 50%;
+	display: flex;
+
+	.product-inner {
+		height: 100%;
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		padding: 20px 20px 0;
+		transition: box-shadow 0.2s ease-in-out;
+
+		&:hover {
+			box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+		}
+
+		.product-header {
+			height: 50%;
 
 			.product-header--top {
 				text-align: center;
 				margin-bottom: 5%;
-			
+
 				.product-title {
 					font-weight: 600;
 					padding-top: 2px;
@@ -37,7 +37,7 @@
 					align-items: center;
 					justify-content: center;
 				}
-			
+
 				.product-sticker {
 					color: black;
 					float: right;
@@ -49,25 +49,23 @@
 				}
 			}
 
-			.product-image-wrapper{
+			.product-image-wrapper {
 				position: relative;
-			
+
 				.image-wrapper {
-			
 					text-align: center;
 					overflow: hidden;
-			
-					.product-image{
-					width: auto;
-					max-height: 200px;
+
+					.product-image {
+						width: auto;
+						max-height: 200px;
 					}
-			
 				}
-			
-				.product-sale{
+
+				.product-sale {
 					position: absolute;
-					top:2%;
-					left:2%;
+					top: 2%;
+					left: 2%;
 					border-radius: 4px;
 					padding: 4px 8px;
 					background: red;
@@ -75,79 +73,68 @@
 					font-weight: 600;
 				}
 			}
+		}
 
-
-	  }
-
-	  .product-properties{
+		.product-properties {
 			height: 20%;
 			word-wrap: break-word;
 			padding: 15px 0;
 			align-items: center;
 			display: flex;
-	
-			.price-block{
+
+			.price-block {
 				margin: 0 auto;
 				padding: 15px;
 				text-align: center;
 			}
 
 			@media (max-width: 1240px) {
-				.price-block{
+				.price-block {
 					padding: 5px;
 				}
 			}
 
-			.property-section{
+			.property-section {
 				margin-bottom: 1rem;
-
-				
 			}
 
-			.stock-block{
+			.stock-block {
 				display: flex;
 				justify-content: center;
 				margin: 0;
-		
-				.stock{
-				  background: #ededed;
-				  display: inline-block;
-				  font-size: 14px;
-				  font-weight: 600;
-				  padding: 8px;
-				  max-width: 125px;
-				  text-overflow: ellipsis;
-				  white-space: nowrap;
-				  margin-right: 4px;
-		
-				  &.available{
-					background: #31df21;
-					color: #ededed;
-					
-				  }
-		
-				  &.not-available{
-					background: #e63e32;
-					color: #ededed;
-				  }
-		
-				}    
-		
+
+				.stock {
+					background: #ededed;
+					display: inline-block;
+					font-size: 14px;
+					font-weight: 600;
+					padding: 8px;
+					max-width: 125px;
+					text-overflow: ellipsis;
+					white-space: nowrap;
+					margin-right: 4px;
+
+					&.available {
+						background: #31df21;
+						color: #ededed;
+					}
+
+					&.not-available {
+						background: #e63e32;
+						color: #ededed;
+					}
+				}
 			}
-
-	
-		} 
-
-
+		}
 	}
-	
+
 	.product-footer {
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
 		margin-top: 15px;
-	
-		.counter_block{
+
+		.counter_block {
 			width: 50%;
 			height: 100%;
 			box-sizing: border-box;
@@ -157,17 +144,18 @@
 			text-align: center;
 			border-radius: 2px;
 			padding: 5px;
-			
-			>span:before{
+
+			> span:before {
 				display: inline-block;
 				content: "";
 				width: 14px;
 				height: 17px;
-				background: url(/bitrix/templates/aspro_next/images/svg/ai.svg) -80px -191px no-repeat;
+				background: url(/bitrix/templates/aspro_next/images/svg/ai.svg) -80px -191px
+					no-repeat;
 				vertical-align: middle;
 			}
-		
-			input[type="text"]{
+
+			input[type="text"] {
 				width: 34px;
 				border: 0;
 				border-left: 1px solid #f3f3f5;
@@ -183,33 +171,32 @@
 				padding: 20px 3px;
 				font-weight: 700;
 			}
-		
-			.minus{
+
+			.minus {
 				line-height: 40px;
 				display: inline-block;
 				cursor: pointer;
 				vertical-align: top;
-		
-				&:before{
-				background: url(../../assets/minus-solid.svg);
-				vertical-align: middle;
+
+				&:before {
+					background: url(../../assets/minus-solid.svg);
+					vertical-align: middle;
 				}
 			}
-		
-			.plus{
+
+			.plus {
 				line-height: 40px;
 				display: inline-block;
 				cursor: pointer;
-		
-				&:before{
-				background: url(../../assets/plus-solid.svg);
-				vertical-align: middle;
+
+				&:before {
+					background: url(../../assets/plus-solid.svg);
+					vertical-align: middle;
 				}
 			}
-		  
 		}
 
-		.buy-block{
+		.buy-block {
 			width: 50%;
 			height: 100%;
 			color: #000;
@@ -217,87 +204,72 @@
 			font-size: 0.9rem;
 			text-transform: uppercase;
 			border-radius: 2px;
-			
-		  
-			.add-to-cart-btn{
+
+			.add-to-cart-btn {
 				margin: 0;
 				height: 100%;
 				border-radius: 0px;
+				position: relative;
+				overflow: hidden;
 
-				&:hover{
+				&:hover {
 					opacity: 1;
 				}
 			}
-				
 		}
-	
-		  
 	}
-  
-   
-    @media screen and (max-width: 550px) {
-      .image-wrapper .product-image{
-        max-width: 140px;
-        max-height: 280px;
-      }
-    }
-  
-  }
-  
-  
 
-  @media screen and (max-width: 1023px) {
-    .product {
+	@media screen and (max-width: 550px) {
+		.image-wrapper .product-image {
+			max-width: 140px;
+			max-height: 280px;
+		}
+	}
+}
+
+@media screen and (max-width: 1023px) {
+	.product {
 		flex: 45%;
 		width: 45%;
 		max-width: 45%;
+	}
+}
 
-    }
+@media screen and (max-width: 767px) {
+	.product {
+		max-width: 100%;
+		flex: 0 0 100%;
+		width: 100%;
+		.product-inner {
+			.product-header {
+				&.product-header--top {
+					.product-title {
+						min-height: 50px;
+					}
+				}
+			}
+		}
+	}
+}
 
-  }
+@media screen and (max-width: 550px) {
+	.product {
+		flex: 0 0 100%;
+		padding: 5%;
 
-   @media screen and (max-width: 767px) {
-    .product {
-	  max-width: 100%;
-	  flex: 0 0 100%;
-	  width: 100%;
-      .product-inner{
-        .product-header{
-          &.product-header--top{
-            .product-title{
-              min-height: 50px;
-            }
-          }
-          
-        }
-        
-      }
+		.description {
+			word-wrap: break-word;
+			width: 250px;
+		}
+	}
+}
 
-    }
-
-  }
-
-  @media screen and (max-width: 550px) {
-  
-    .product {
-      flex: 0 0 100%;
-      padding: 5%;
-  
-      .description {
-        word-wrap: break-word;
-        width: 250px;
-      }
-    }
-  }
-
-  
-  @media screen and (max-width: 320px) {
-
-    .product{
-      .product-image-wrapper{
-        .image-wrapper{
-          min-height: 100px;
-        }
-      }
-    }
-  }
+@media screen and (max-width: 320px) {
+	.product {
+		.product-image-wrapper {
+			.image-wrapper {
+				min-height: 100px;
+			}
+		}
+	}
+}
