--- a/src/components/VerticalMenu/VerticalMenu.scss
+++ b/src/components/VerticalMenu/VerticalMenu.scss
@@ -1,87 +1,73 @@
-.vertical-menu{
-    padding: 21px 18px 21px 23px;
-    margin-left: 20px;
+.vertical-menu {
+  padding: 21px 18px 21px 23px;
+  margin-left: 20px;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.170509);
+  height: 100%;
+
+  &__logo {
+    text-align: center;
+    margin-left: 4px;
+    .top-logo {
+      width: auto;
+      max-height: 50px;
+    }
+
+    &:hover {
+      opacity: 0.9;
+    }
+  }
+
+  .sub-menu {
+    width: 100%;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.170509);
-	min-height: 1188px;
-	
+    border-radius: 4px;
+    text-align: center;
+    margin-top: 16px;
+    padding: 12px;
+    cursor: pointer;
+    text-transform: uppercase;
 
-	
-    
+    a {
+      color: #fff;
+    }
+  }
+  .categories {
+    margin-top: 50px;
 
-    &__logo{
-        text-align: center;
-        margin-left: 4px;
-        .top-logo{
-            width: auto;
-            max-height: 50px;
+    .menu-item {
+      margin-bottom: 20px;
+
+      &__title {
+        a {
+          color: #999999;
+          font-style: normal;
+          font-weight: 800;
+          font-size: 1rem;
+          line-height: 36px;
+          text-transform: uppercase;
         }
+      }
 
-        &:hover{
+      &__subtitle {
+        padding: 0 10px;
+        a {
+          color: #2c2c2c;
+          font-size: 0.9rem;
+          line-height: 40px;
+          text-transform: uppercase;
+          font-weight: 600;
+
+          &:hover {
             opacity: 0.9;
+          }
         }
+      }
     }
-
-    .sub-menu{
-        
-		width: 100%;
-        box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.170509);
-        border-radius: 4px;
-		text-align: center;
-		margin-top: 16px;
-        padding: 12px;
-        cursor: pointer;
-		text-transform: uppercase;
-		
-        a{
-            color: #fff;
-        }
-    }
-    .categories{
-        margin-top: 50px;
-
-        .menu-item{
-            margin-bottom: 20px;
-
-            &__title{
-
-                a{
-                    color: #999999;
-                    font-style: normal;
-                    font-weight: 800;
-                    font-size: 1rem;
-                    line-height: 36px;
-                    text-transform: uppercase;
-                }
-            }
-
-            &__subtitle{
-                padding: 0 10px;
-                a{
-                    color: #2C2C2C;
-                    font-size: 0.9rem;
-					line-height: 40px;
-					text-transform: uppercase;
-					font-weight: 600;
-
-					&:hover{
-						opacity: 0.9;
-					}
-                    
-                }
-            }
-
-            
-
-           
-        }
-        
-        
-        
-    }
+  }
 }
 
 @media (max-width: 1240px) {
-	.vertical-menu{
-		margin:0;
-	}
+  .vertical-menu {
+    margin: 0;
+  }
 }
