--- a/src/components/Pagination/Pagination.scss
+++ b/src/components/Pagination/Pagination.scss
@@ -21,7 +21,7 @@ $track-color: #346d1f !default;
 				padding: 10px 15px;
 				border-radius: 100px;
 				border-color: #EDEDED;
-				background: none;
+				background: #ccc;
 
 				&:hover{
 					background: $track-color;
